[tool.poetry]
name = "pyspark-tools"
version = "0.1.0"
description = "PySpark tools for processing dataframes on products"
authors = ["Your Name <you@example.com>"]
license = "GPLv2"
readme = "README.md"
packages = [{include = "pyspark_tools"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
pyspark = "^4.0.1"
ipython = "<9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
